uncomment brand property

--- a/src/codeokk/modules/filters/filters.component.html
+++ b/src/codeokk/modules/filters/filters.component.html
@@ -19,7 +19,7 @@
     </ul>
   </div>
 
-  <div class="filter-brands">
+  <!-- <div class="filter-brands">
     <span class="filter-title">Brand</span>
     <div
       class="filter-searchbox"
@@ -70,7 +70,7 @@
     <ul *ngIf="filteredBrands.length === 0 && brandSearchText.length > 0">
       <li>No brands found</li>
     </ul>
-  </div>
+  </div> -->
   <div class="slider-container">
     <span class="filter-title price-title">Price</span>
     <mat-slider
