--- a/src/codeokk/modules/product-details/product-details.component.html
+++ b/src/codeokk/modules/product-details/product-details.component.html
@@ -81,7 +81,7 @@
   </div> -->
   <div class="desc-container">
     <div class="price-info">
-      <h1 class="desc-title">{{ productDetails?.brand[0].name }}</h1>
+      <!-- <h1 class="desc-title">{{ productDetails?.brand[0].name }}</h1> -->
       <h1 class="desc-name">
         {{ productDetails?.name }}
       </h1>
