Fixed Add To Cart, and removed Brand input in product post

--- a/src/codeokk/modules/admin/component/admin-dashboard/admin-dashboard.component.html
+++ b/src/codeokk/modules/admin/component/admin-dashboard/admin-dashboard.component.html
@@ -381,7 +381,7 @@
                 </mat-option>
               </mat-select>
             </mat-form-field>
-            <mat-form-field>
+            <!-- <mat-form-field>
               <input
                 type="text"
                 placeholder="Select Brand"
@@ -401,7 +401,7 @@
                   {{ brand.name }}
                 </mat-option>
               </mat-autocomplete>
-            </mat-form-field>
+            </mat-form-field> -->
             <mat-form-field>
               <mat-label>Select Color</mat-label>
               <mat-select
