--- a/src/codeokk/modules/product-details/product-details.component.html
+++ b/src/codeokk/modules/product-details/product-details.component.html
@@ -356,11 +356,7 @@
             >Seller: <span class="supplier-productSellerName">ELCINCO</span
             ><span class="supplier-partner-name"> </span
           ></span> -->
-          <div
-            class="supplier-viewmore-link"
-            style="color: rgb(255, 63, 108)"
-            (click)="toggleModal()"
-          >
+          <div class="supplier-viewmore-link" (click)="toggleModal()">
             View Supplier Information
           </div>
         </div>
